crates/wac-parser/tests/resolution/fail/duplicate-resource-method.wac
package test:comp;

world foo {
    resource x {
        x: func();
        x: static func();
    }
}